# timeline

./: .dockerignore  Cargo.toml  Dockerfile  TODO.md  analysis.py  csv.separate  query.2.json  query.fd.json  query.json  test  test.csv
analysis/: main.py
data/: tele.csv.tracks.csv
src/: error.rs  lib.rs  node.rs  opts.rs  parse.rs  query.rs  tm_csv.rs  tracks.rs  zone.rs  zone_search.rs  zones.rs
src/query/: calculations.rs  mod.rs  query.rs  query_config.rs  test.rs
src/tests/: mod.rs  tele.reduced.zones.csv
