[package]
name = "calculate_differences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
csv = "1.1.6"
dotenv = "0.15.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
structopt = "0.3.25"
